--- a/hardware.html
+++ b/hardware.html
@@ -3,6 +3,9 @@
     <head>
         <title> </title>
     </head>
+    <style>
+         body {background-image: url("http://p1.pichost.me/i/20/1432497.jpg")}
+    </style>
     <body>
 
     </body>
