--- a/eightball.html
+++ b/eightball.html
@@ -4,8 +4,8 @@
     </head>
     <body>
     <div id="sha">
-        <div id="ocirc" class="shake"></div>
-        <div id="icirc" class="shake"></div>
+        <div id="outside" class="shake"></div>
+        <div id="inside" class="shake"></div>
         <div id="eight" class="shake">8</div>
     </div>
     <div id="res"></div>
